Section Formations + Projets

--- a/portfolio_Arthur_Trochon/index.html
+++ b/portfolio_Arthur_Trochon/index.html
@@ -30,8 +30,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-    <!-- Lien vers le dossier de javaScript -->
-    <script src="js/script.js"></script>
+
 </head>
 <body>
 <header id="enHaut">
@@ -93,7 +92,8 @@
                 <div class="portfolio-block ">
                     <h4 class="title">Informations personnelles</h4>
                     <div class="blue-divider"></div>
-                    <p>Je suis actuellement en <strong>stage « Développement logiciel »</strong> chez Thales <i>(Laval)</i> pendant 11 semaines en vu de l’obtention
+                    <p>Je suis actuellement en <strong>stage « Développement logiciel »</strong> chez Thales
+                        <i>(Laval)</i> pendant 11 semaines en vu de l’obtention
                         de mon DUT Informatique.</p>
                     <p>Je suis à la <strong>recherche d’une Alternance</strong> en Bac + 3 dans les Data Sciences du
                         côté de Lyon.</p>
@@ -103,8 +103,11 @@
                 <div class="portfolio-block text">
                     <h4 class="title">Capacités</h4>
                     <div class="blue-divider"></div>
-                    <p>Je suis à l'écoute, <strong>j'apprends vite</strong>, <strong>je suis sérieux </strong> et <strong>je m'adapte facilement</strong> dans mon travail. </p>
-                    <p>Je suis quelqu’un qui aime <strong>communiquer</strong> et force de proposition. Je suis <strong>déterminé</strong> et <strong>envieux</strong> de faire partie d’un projet et d’une équipe dans un <strong>cadre professionnel</strong>.</p>
+                    <p>Je suis à l'écoute, <strong>j'apprends vite</strong>, <strong>je suis sérieux </strong> et
+                        <strong>je m'adapte facilement</strong> dans mon travail. </p>
+                    <p>Je suis quelqu’un qui aime <strong>communiquer</strong> et force de proposition. Je suis <strong>déterminé</strong>
+                        et <strong>envieux</strong> de faire partie d’un projet et d’une équipe dans un <strong>cadre
+                            professionnel</strong>.</p>
                 </div>
             </div>
         </div>
@@ -113,13 +116,20 @@
                 <div class="portfolio-block much-longer">
                     <h4 class="title">Hobbies et centres d'intêrets</h4>
                     <div class="blue-divider"></div>
-                    <p>Je pratique le <strong>football en club</strong> depuis l'âge de 5 ans et je suis actuellement joueur en <strong>Régionale 3 Bretagne</strong> (ASC Romagné). </p>
+                    <p>Je pratique le <strong>football en club</strong> depuis l'âge de 5 ans et je suis actuellement
+                        joueur en <strong>Régionale 3 Bretagne</strong> (ASC Romagné). </p>
                     <p class="subtitle">Esprit d'équipe, Endurance Physique et Mental</p>
                     <br>
-                    <p>J'aime<sport> tous les sports en général</sport> et en pratique chaque semaine (Tennis, Course à pied, Football...), je fais aussi de la musculation depuis peu de temps.</p>
+                    <p>J'aime
+                        <sport> tous les sports en général</sport>
+                        et en pratique chaque semaine (Tennis, Course à pied, Football...), je fais aussi de la
+                        musculation depuis peu de temps.
+                    </p>
                     <br>
-                    <p>J'aime aussi lire, ma dernière lecture est <strong>“Harry Potter and the philosopher's stone”</strong> en Anglais, je vais prochainement acheter <i>“Disruption -
-                        Intelligence artificielle, fin du salariat, humanité augmentée”</i>, un livre de Stéphane Mallard.</p>
+                    <p>J'aime aussi lire, ma dernière lecture est <strong>“Harry Potter and the philosopher's
+                        stone”</strong> en Anglais, je vais prochainement acheter <i>“Disruption -
+                        Intelligence artificielle, fin du salariat, humanité augmentée”</i>, un livre de Stéphane
+                        Mallard.</p>
                 </div>
 
 
@@ -143,12 +153,141 @@
     <div class="container" id="ImageBackgroundCompetences">
         <div class="row img">
             <div class="col-md-12 block-gif text-center">
-                <iframe src="https://giphy.com/embed/eljCVpMrhepUSgZaVP" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p>
+                <iframe src="https://giphy.com/embed/eljCVpMrhepUSgZaVP" width="480" height="480" frameBorder="0"
+                        class="giphy-embed" allowFullScreen></iframe>
+                <p></p>
                 <a class="subtitle" href="https://giphy.com/gifs/blue-white-brain-eljCVpMrhepUSgZaVP">via GIPHY</a>
             </div>
 
         </div>
     </div>
+    <div class="container" id="Competences">
+        <div class="row justify-content-center row-title">
+            <h1 class="title">Compétences</h1>
+        </div>
+        <div class="row justify-content-center">
+            <!--Carousel Wrapper-->
+            <div class="col-1 d-flex align-items-center justify-content-center">
+                <a href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <div class="carousel-nav-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129"
+                             xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <path d="m88.6,121.3c0.8,0.8 1.8,1.2 2.9,1.2s2.1-0.4 2.9-1.2c1.6-1.6 1.6-4.2 0-5.8l-51-51 51-51c1.6-1.6 1.6-4.2 0-5.8s-4.2-1.6-5.8,0l-54,53.9c-1.6,1.6-1.6,4.2 0,5.8l54,53.9z"/>
+                        </svg>
+                    </div>
+                </a>
+            </div>
+            <div class="col-10">
+                <!--Start carousel-->
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row">
+                                <div style="background-image:url('images/computer-2982270_1920.jpg'); "
+                                     class="col-12 col-md d-flex align-items-center justify-content-center">
+                                    <h3 id="slideCompetenceDev" class="title">Développement</h3>
+                                </div>
+                                <div style="background-color:#1E3D59; color: #F5F0E1;"
+                                     class="col-12 col-md d-flex align-items-center justify-content-center text">
+                                    <h5><strong>Compétences acquises</strong></h5><br>
+                                    <h6><strong>WEB :</strong> PHP (+ Symfony), JavaScript (+ JQuery) et HTML&CSS</h6>
+                                    <h6><strong>LOGICIEL :</strong> JAVA</h6>
+                                    <h6><strong>BDD :</strong> SQL & PL/SQl</h6>
+                                </div>
+                                <div style="background-color:#F5F0E1;  color: #FFC13B;"
+                                     class="col-12 col-md d-flex align-items-center justify-content-center text"
+                                     class="col-12 col-md d-flex align-items-center justify-content-center">
+                                    <h5 style="color: #FFC13B"><strong>Futurs Compétences</strong></h5><br>
+                                    <h6>Python et R</h6>
+                                    <h6>NoSQL et MongoDB</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div style="background-image:url('images/paper-3213924_1920.jpg'); "
+                                     class="col-12 col-md d-flex align-items-center justify-content-center">
+                                    <h3 id="slideCompetenceGestion" class="title">Gestion & Droit</h3>
+                                </div>
+                                <div style="background-color:#1E3D59;"
+                                     class="col-12 col-md d-flex align-items-center justify-content-center text">
+                                    <h5 style="color: #F5F0E1;"><strong>Compétences acquises</strong></h5><br>
+                                    <h6>Méthodes et moyens de projets <strong>(Agiles)</strong></h6>
+                                    <h6><strong>Diriger</strong> une équipe (manager, assumer)</h6>
+                                    <h6>Droit du travail et droit informatique</h6>
+                                </div>
+                                <div style="background-color:#F5F0E1; color: #FF6E40"
+                                     class="col-12 col-md d-flex align-items-center justify-content-center text"
+                                     class="col-12 col-md d-flex align-items-center justify-content-center">
+                                    <h5 style="color: #FF6E40"><strong>Futurs Compétences</strong></h5><br>
+                                    <h6>Contrôle de gestion</h6>
+                                    <h6>RGPD</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div style="background-image:url('images/math-work-4711302_1920.jpg'); "
+                                     class="col-12 col-md d-flex align-items-center justify-content-center">
+                                    <h3 id="slideCompetenceJuridique" class="title">Mathématiques</h3>
+                                </div>
+                                <div style="background-color:#1E3D59; color: #F5F0E1;"
+                                     class="col-12 col-md d-flex align-items-center justify-content-center text">
+                                    <h5><strong>Compétences acquises</strong></h5><br>
+                                    <h6>Variables aléatoires</h6>
+                                    <h6>Estimations, probabilités et statistiques</h6>
+                                    <h6>Graphes et langages</h6>
+                                    <h6>Algèbre linéaires et théorie des ensembles</h6>
+                                </div>
+                                <div style="background-color:#F5F0E1;"
+                                     class="col-12 col-md d-flex align-items-center justify-content-center text"
+                                     class="col-12 col-md d-flex align-items-center justify-content-center">
+                                    <h5 style="color: #FFC13B"><strong>Futurs Compétences</strong></h5><br>
+                                    <h6>Diagonalisation</h6>
+                                    <h6>Séries et intégrales impropres</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--End carousel-->
+            </div>
+
+            <div class="col-1 d-flex align-items-center justify-content-center"><a href="#carouselExampleIndicators"
+                                                                                   data-slide="next">
+                <div class="carousel-nav-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129"
+                         xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <path d="m40.4,121.3c-0.8,0.8-1.8,1.2-2.9,1.2s-2.1-0.4-2.9-1.2c-1.6-1.6-1.6-4.2 0-5.8l51-51-51-51c-1.6-1.6-1.6-4.2 0-5.8 1.6-1.6 4.2-1.6 5.8,0l53.9,53.9c1.6,1.6 1.6,4.2 0,5.8l-53.9,53.9z"/>
+                    </svg>
+                </div>
+            </a>
+            </div>
+        </div>
+    </div>
+    <div class="container" id="ImageBackgroundFormation">
+        <div class="row img">
+            <div class="col-md-12 block-gif text-center">
+                <iframe src="https://giphy.com/embed/QaMhVZVwOvDiw" width="480" height="480" frameBorder="0" class="giphy-embed rounded-circle" allowFullScreen></iframe>
+                <p></p>
+                <a class="subtitle" style="color: #1E3D59" href="https://giphy.com/gifs/blue-white-brain-eljCVpMrhepUSgZaVP">via GIPHY</a>
+            </div>
+
+        </div>
+    </div>
+    <div><a id="cRetour" class="cInvisible" href="#enHaut"></a></div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            window.onscroll = function (ev) {
+                document.getElementById("cRetour").className = (window.pageYOffset > 100) ? "cVisible" : "cInvisible";
+            };
+        });
+    </script>
+    <!-- Lien vers le dossier de javaScript -->
+    <script src="js/script.js"></script>
+
 </main>
 <footer>
 
